--- a/src/informacoes-do-dia/informacoes-do-dia.css
+++ b/src/informacoes-do-dia/informacoes-do-dia.css
@@ -1,23 +1,42 @@
 .outside-card {
-  border: solid 1px;
   margin: 10px;
+  margin-bottom: 20px;
   padding: 10px;
+
+  border: 4px solid #004b94;
+  background-color: #e5e5e5;
+
+  border-radius: 24px 24px 24px 24px;
+  -webkit-border-radius: 24px 24px 24px 24px;
+  -moz-border-radius: 24px 24px 24px 24px;
+
+  box-shadow: 13px 10px 30px -12px rgba(0,0,0,0.7);
+  -webkit-box-shadow: 13px 10px 30px -12px rgba(0,0,0,0.7);
+  -moz-box-shadow: 13px 10px 30px -12px rgba(0,0,0,0.7);
 }
 
 .header-card {
   display: flex;
   flex-direction: row;
 
-  margin-bottom: 10px;
+  margin-bottom: 20px;
 }
 
 .inside-card {
   display: flex;
   flex-direction: row;
 
-  border: solid 1px;
-  margin: 5px 0px;
-  padding: 5px;
+  border: solid 1px #072b7b;
+  margin: 15px 10px;
+  padding: 10px;
+
+  border-radius: 10px 10px 10px 10px;
+  -webkit-border-radius: 10px 10px 10px 10px;
+  -moz-border-radius: 10px 10px 10px 10px;
+
+  box-shadow: 4px 4px 12px 0px rgba(0,0,0,0.75);
+  -webkit-box-shadow: 4px 4px 12px 0px rgba(0,0,0,0.75);
+  -moz-box-shadow: 4px 4px 12px 0px rgba(0,0,0,0.75);
 }
 
 .label-periodo {
