--- a/src/global_styles.css
+++ b/src/global_styles.css
@@ -1,1 +1,7 @@
 /* Add application styles & imports to this file! */
+@media (prefers-color-scheme: dark) {
+  body {
+    background-color: black;
+    color: white;
+  }
+}
