--- a/src/informacoes-do-dia/informacoes-do-dia.css
+++ b/src/informacoes-do-dia/informacoes-do-dia.css
@@ -4,15 +4,15 @@
   padding: 10px;
 
   border: 4px solid #004b94;
-  background-color: #e5e5e5;
+  
 
   border-radius: 24px 24px 24px 24px;
   -webkit-border-radius: 24px 24px 24px 24px;
   -moz-border-radius: 24px 24px 24px 24px;
 
-  box-shadow: 13px 10px 30px -12px rgba(0,0,0,0.7);
-  -webkit-box-shadow: 13px 10px 30px -12px rgba(0,0,0,0.7);
-  -moz-box-shadow: 13px 10px 30px -12px rgba(0,0,0,0.7);
+  box-shadow: 13px 10px 30px -12px #072b7b;
+  -webkit-box-shadow: 13px 10px 30px -12px #072b7b;
+  -moz-box-shadow: 13px 10px 30px -12px #072b7b;
 }
 
 .header-card {
@@ -34,9 +34,9 @@
   -webkit-border-radius: 10px 10px 10px 10px;
   -moz-border-radius: 10px 10px 10px 10px;
 
-  box-shadow: 4px 4px 12px 0px rgba(0,0,0,0.75);
-  -webkit-box-shadow: 4px 4px 12px 0px rgba(0,0,0,0.75);
-  -moz-box-shadow: 4px 4px 12px 0px rgba(0,0,0,0.75);
+  box-shadow: 4px 4px 12px 0px #072b7b;
+  -webkit-box-shadow: 4px 4px 12px 0px #072b7b;
+  -moz-box-shadow: 4px 4px 12px 0px #072b7b;
 }
 
 .label-periodo {
