--- a/src/informacoes-do-dia/informacoes-do-dia.css
+++ b/src/informacoes-do-dia/informacoes-do-dia.css
@@ -45,7 +45,7 @@
   font-weight: bold;
   color: #dce6df;
 
-  padding-left: 20px;
+  padding-left: 15px;
   width: 150px;
 }
 
@@ -57,7 +57,7 @@
 }
 
 .label-periodo {
-  text-decoration: underline;
+  text-align: center;
   font-weight: bold;
   color: #dce6df;
 
